# smartforecast

./: README.md  dashboard.py  pyproject.toml
notebooks/: 01_TimeSeries.ipynb  Test_dash.ipynb
smartforecast/: Timeseries_gen.py  __init__.py  utils.py
tests/: test_smartforecast.py
