[tool.poetry]
name = "SmartForecast"
version = "0.1.0"
description = ""
authors = ["sschaack <sofiane.schaack@capgemini.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
ipykernel = "^6.16.0"
plotly = "^5.10.0"
pandas = "^1.5.0"
nbformat = "^5.6.1"
matplotlib = "^3.6.1"
ipywidgets = "^8.0.2"
streamlit = "^1.13.0"
watchdog = "^2.1.9"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
